# opencvLearning

kalmanFilter/: README.md  kalman.cpp  kalman.h  kalmanDemo.py  kalmanSamples.cpp  realTimePoseEstimation.cpp  run.sh
normalBayesClassifer/: CMakeLists.txt  README.md  demo.cpp  demo2D.cpp  run.sh  run2D.sh
normalBayesClassifer/doc/sourceCode/: nbayes.cpp
